--- a/056_Name_Card_Project/templates/index.html
+++ b/056_Name_Card_Project/templates/index.html
@@ -1,54 +1,68 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
 <!--
 	Identity by HTML5 UP
 	html5up.net | @n33co
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
 <html>
-	<head>
-		<title>James MacPherson</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<link rel="stylesheet" href="static/assets/css/main.css" />
-		<noscript><link rel="stylesheet" href="static/assets/css/noscript.css" /></noscript>
-	</head>
-	<body class="is-loading">
+  <head>
+    <title>James MacPherson</title>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" href="static/assets/css/main.css" />
+    <noscript
+      ><link rel="stylesheet" href="static/assets/css/noscript.css"
+    /></noscript>
+  </head>
+  <body class="is-loading">
+    <!-- Wrapper -->
+    <div id="wrapper">
+      <!-- Main -->
+      <section id="main">
+        <header>
+          <span class="avatar"
+            ><img src="static/images/moii.jpg" alt=""
+          /></span>
+          <h1>James MacPherson</h1>
+          <p>Fabulously Flawed</p>
+        </header>
+        <footer>
+          <ul class="icons">
+            <li>
+              <a href="https://github.com/pinkieboi" class="fa-github"></a>
+            </li>
+            <li>
+              <a
+                href="mailto:contact@jamesmacpherson.me"
+                class="fa-envelope"
+              ></a>
+            </li>
+          </ul>
+        </footer>
+      </section>
 
-		<!-- Wrapper -->
-			<div id="wrapper">
+      <!-- Footer -->
+      <footer id="footer">
+        <ul class="copyright">
+          <li>&copy; James MacPherson</li>
+          <li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+        </ul>
+      </footer>
+    </div>
 
-				<!-- Main -->
-					<section id="main">
-						<header>
-							<span class="avatar"><img src="static/images/moii.jpg" alt="" /></span>
-							<h1>James MacPherson</h1>
-							<p>Fabulously Flawed</p>
-						</header>
-						<footer>
-							<ul class="icons">
-								<li><a href="https://github.com/pinkieboi" class="fa-github"></a></li>
-								<li><a href="mailto:contact@jamesmacpherson.me" class="fa-envelope"></a></li>
-							</ul>
-						</footer>
-					</section>
-
-				<!-- Footer -->
-					<footer id="footer">
-						<ul class="copyright">
-							<li>&copy; James MacPherson</li>
-							<li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-						</ul>
-					</footer>
-
-			</div>
-
-		<!-- Scripts -->
-			<script>
-				if ('addEventListener' in window) {
-					window.addEventListener('load', function() { document.body.className = document.body.className.replace(/\bis-loading\b/, ''); });
-					document.body.className += (navigator.userAgent.match(/(MSIE|rv:11\.0)/) ? ' is-ie' : '');
-				}
-			</script>
-
-	</body>
+    <!-- Scripts -->
+    <script>
+      if ("addEventListener" in window) {
+        window.addEventListener("load", function () {
+          document.body.className = document.body.className.replace(
+            /\bis-loading\b/,
+            ""
+          );
+        });
+        document.body.className += navigator.userAgent.match(/(MSIE|rv:11\.0)/)
+          ? " is-ie"
+          : "";
+      }
+    </script>
+  </body>
 </html>
