arrange films by rating low to high

--- a/064_Top_Films/templates/index.html
+++ b/064_Top_Films/templates/index.html
@@ -6,10 +6,11 @@
 <div class="container">
   <h1 class="heading">My Top 10 Movies</h1>
   <p class="description">These are my all-time favourite movies.</p>
-  {% for movie in films %}
+  {% for movie in films[::-1] %}
   <div class="card" >
     <div class="front" style="background-image: url('{{ movie.img_url }}');">
-        <p class="large">{{movie.id}}</p>
+        <p class="large">{{ films.index(movie) + 1 }}</p>
+
     </div>
     <div class="back">
       <div>
